2004-11-01  Todd Berman  <tberman@off.net>

	* Commands/AutoStartCommands.cs: Open the real last project.

2004-11-01  Todd Berman  <tberman@off.net>

	* Services/File/RecentOpen.cs: Properly handle if the renaming occurs
	on a Directory, or if it is using SourceFile instead of FileName.

	Need to investigate why SourceFile and FileName both exist.

2004-10-29  Todd Berman  <tberman@off.net>

	* Commands/FileCommands: Fix SaveAs.

2004-10-29  Todd Berman  <tberman@off.net>

	* Commands/FileCommands.cs: Patch from Valters Svabe
	<valters@inbox.lv> to close bug #62300

2004-10-28  Todd Berman  <tberman@off.net>

	* Services/File/RecentFiles.cs: Remove C.WL

2004-10-27  Todd Berman  <tberman@off.net>

	* Commands/AutoStartCommands.cs: Fix the Load Previous Project on
	Startup option.

2004-10-27  John Luke  <john.luke@gmail.com>

	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyParameter.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyMethod.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyReturnType.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyEvent.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyAttribute.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyField.cs
	* Internal/Parser/SharpAssemblyLayer/SharpAssemblyProperty.cs:
	Add a using alias for SharpAssembly so we can compile with mcs HEAD
	we were taking advantage of a mcs bug it seems

2004-10-27  Levi Bard <taktaktaktaktaktaktaktaktaktak@gmail.com>

	* Services/ParserService/DefaultParserService.cs: comment out code
	to select the VB parser, because we dont actually have one yet.

2004-10-22  Chris Toshok  <toshok@ximian.com>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: add
	DebuggerThreadPad.

2004-10-22  Chris Toshok  <toshok@ximian.com>

	* Gui/Workbench/Layouts/SdiWorkspaceLayout.cs: add
	MonoDevelop.SourceEditor.Gui.DebuggerStackTracePad to the
	debugPads.

2004-10-21  Chris Toshok  <toshok@ximian.com>

	* Gui/Workbench/DefaultWorkbench.cs: don't try to open